--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,4 +17,78 @@ html {
   font-size: 16px;
 }
 
+main {
+  height: 100vh;
+  background-color: var(--Green-200-lighter);
+}
+
+.form {
+  margin: auto;
+  border-radius: 1em;
+  max-width: 600px;
+  background-color: white;
+  border: 1px solid;
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+}
+
+.form-group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 0.9em;
+}
+
+.form-group label {
+  margin-bottom: 0.6em;
+}
+
+.form-group input {
+  padding: 1em 0.5em;
+  border-radius: 0.6em;
+  border: none;
+  border: 1px solid;
+}
+
+.radio-group {
+  border: 1px solid;
+  flex: 1;
+  padding: 1em;
+  border-radius: 1em;
+}
+
+.form-group-radio {
+  display: flex;
+  flex: 1;
+  gap: 1em;
+  justify-content: space-between;
+}
+
+#message {
+  border-radius: 1em;
+}
+
+.form-checkbox #consent {
+  margin-right: 1em;
+}
+
+.submit {
+  display: flex;
+}
+
+.submit button {
+  padding: 0.8em 1em;
+  margin: 1.3em auto;
+  font-size: 1rem;
+  width: 85%;
+  background-color: var(--Green-600-medium);
+  border-radius: 0.7em;
+  color: white;
+  border: none;
+}
+
 /*# sourceMappingURL=style.css.map */
