minor changes on form:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ html {
 main {
   height: 100vh;
   background-color: var(--Green-200-lighter);
+  padding: 3em;
 }
 
 .form {
@@ -28,6 +29,10 @@ main {
   max-width: 600px;
   background-color: white;
   border: 1px solid;
+}
+
+.form h1 {
+  padding: 0.5em 0 0.3em 0.5em;
 }
 
 .form-row {
@@ -89,6 +94,18 @@ main {
   border-radius: 0.7em;
   color: white;
   border: none;
+}
+
+span {
+  margin-top: 0.2em;
+  color: red;
+  padding: 0.2em;
+  margin-left: 0.5em;
+  font-weight: bold;
+}
+
+textarea {
+  padding: 1em;
 }
 
 /*# sourceMappingURL=style.css.map */
